<resources>
    <string name="app_name">UniCluBz</string>

    <string name="next">Next</string>

    <string name="name">Name</string>
    <string name="d_o_b">Date of Birth</string>
    <string name="NID_number">NID Number</string>
    <string name="blood_group">Blood Group</string>


    <string name="student_id">Student ID</string>

    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>

    <string name="sign_up">Sign Up</string>
    <string name="text_header">Successful!</string>

    <string name="username">Name:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="nid_number">NID Number:</string>
    <string name="b_group">Blood Group:</string>
    <string name="university_option">University:</string>
    <string name="department_option">Department:</string>
    <string name="student_id_option">Student ID:</string>
    <string name="study_level_option">Study Level:</string>
    <string name="email_address_option">Email Address:</string>
    <string name="phone_number_option">Phone Number:</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="login">Log In</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>

    <string-array name="university_list">
        <item>University</item>
        <item>North South University</item>
        <item>Dhaka University</item>
        <item>Bangladesh University of Engineering and Technology(BUET)</item>
        <item>Jahangirnagar University</item>
        <item>Brac University</item>
        <item>Shahjalal University of Science and Technology</item>
        <item>Dhaka Medical College</item>
        <item>Ahsanullah University of Science and Technology</item>
        <item>Dhaka City College</item>
    </string-array>

    <string-array name="department_list">
        <item>Department</item>
        <item>Department of Electrical and Computer Engineering</item>
        <item>Department of Textile Engineering</item>
        <item>Department of Clinical Psychology</item>
        <item>Department of Anthropology</item>
        <item>Department of Marketing and International Business</item>
        <item>Department of Accounting and Finance</item>
        <item>Department of English and Modern Languages</item>
        <item>Department of Mathematics and Physics</item>
        <item>Department of Surgery</item>
        <item>Department of EMBA</item>
    </string-array>

    <string-array name="study_level_list">
        <item>Study Level</item>
        <item>Undergraduate</item>
        <item>Graduate</item>
        <item>PhD</item>
        <item>Post-Doctoral</item>
    </string-array>
</resources>