<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textColor="@color/megenta_pink"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />

    <EditText
        android:id="@+id/input_DoB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/d_o_b"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/input_name"
        app:layout_constraintStart_toStartOf="@+id/input_name"
        app:layout_constraintTop_toBottomOf="@+id/input_name" />

    <EditText
        android:id="@+id/input_NID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/NID_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/input_DoB"
        app:layout_constraintStart_toStartOf="@+id/input_DoB"
        app:layout_constraintTop_toBottomOf="@+id/input_DoB" />

    <EditText
        android:id="@+id/input_blood_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/blood_group"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/input_NID"
        app:layout_constraintStart_toStartOf="@+id/input_NID"
        app:layout_constraintTop_toBottomOf="@+id/input_NID" />


    <EditText
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/input_blood_group"
        app:layout_constraintStart_toStartOf="@+id/input_blood_group"
        app:layout_constraintTop_toBottomOf="@+id/input_blood_group" />

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/input_email"
        app:layout_constraintStart_toStartOf="@+id/input_email"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <EditText
        android:id="@+id/input_student_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/student_id"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/spinner_department"
        app:layout_constraintStart_toStartOf="@+id/spinner_department"
        app:layout_constraintTop_toBottomOf="@+id/spinner_department" />


    <Spinner
        android:id="@+id/spinner_university"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="@+id/input_phone"
        app:layout_constraintStart_toStartOf="@+id/input_phone"
        app:layout_constraintTop_toBottomOf="@+id/input_phone" />

    <Spinner
        android:id="@+id/spinner_department"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="@+id/spinner_university"
        app:layout_constraintStart_toStartOf="@+id/spinner_university"
        app:layout_constraintTop_toBottomOf="@+id/spinner_university" />

    <Spinner
        android:id="@+id/spinner_study_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="@+id/input_student_id"
        app:layout_constraintStart_toStartOf="@+id/input_student_id"
        app:layout_constraintTop_toBottomOf="@+id/input_student_id" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/spinner_study_level"
        app:layout_constraintStart_toStartOf="@+id/spinner_study_level"
        app:layout_constraintTop_toBottomOf="@+id/spinner_study_level" />


    <Button
        android:id="@+id/signup_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/megenta_pink"
        android:fontFamily="@font/poppins_semibold"
        android:padding="4dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#9A8B8B"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textColor="@color/megenta_pink"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toEndOf="@+id/sign_up"
        app:layout_constraintTop_toTopOf="@+id/sign_up"
        app:layout_constraintVertical_bias="0.413" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>